TP8-Tavarifun/tests/bad/ref/t01.ml
let a : int ref = 1 ;;
print_int !a ;;
